--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^3.1.9",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
