--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-SERVER_PORT=8080
+PORT=8080
 
-DB_HOST=containers-us-west-53.railway.app
-DB_PORT=5940
-DB_DATABASE=railway
-DB_USER=postgres
-DB_PASSWORD=QAVoPCjQPUDypEbRCXcg
+DATABASE_URL= postgresql://postgres:QAVoPCjQPUDypEbRCXcg@containers-us-west-53.railway.app:5940/railway
 
 JWT_SECRET= secret
