--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "copy": "mkdir dist\\mailer\\template > nul && xcopy /E /I src\\mailer\\template dist\\mailer\\template"
+    "copy": "mkdir -p dist/mailer/template && cp -R src/mailer/template/. dist/mailer/template"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
