--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build && npm run copy",
+    "build": "nest build && rimraf dist/mailer/template && ncp src/mailer/template dist/mailer/template",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -18,8 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "copy": "mkdir -p dist/mailer/template && cp -R src/mailer/template/. dist/mailer/template"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
@@ -33,8 +32,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "ejs": "^3.1.9",
+    "fs-extra": "^11.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "make-dir": "^3.1.0",
+    "mkdirp": "^3.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.9.1",
@@ -44,7 +46,6 @@
     "pg": "^8.11.0",
     "pug": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.16"
   },
@@ -64,7 +65,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "ncp": "^2.0.0",
     "prettier": "^2.3.2",
+    "rimraf": "^5.0.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
