--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
 
-DATABASE_URL= postgresql://postgres:QAVoPCjQPUDypEbRCXcg@containers-us-west-53.railway.app:5940/railway
+DATABASE_URL= postgresql://postgres:kQp7oiNU54jmja754zqm@containers-us-west-80.railway.app:7512/railway
 
 JWT_SECRET= secret
