--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
 
-DATABASE_URL= postgresql://postgres:kQp7oiNU54jmja754zqm@containers-us-west-80.railway.app:7512/railway
+DATABASE_URL= postgresql://postgres:BoFq9zh3NWmQP8y8Inum@containers-us-west-207.railway.app:7709/railway
 
 JWT_SECRET= secret
